[package]
name = "er-toughness-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
aobscan = "0.3.0"
clap = { version = "4.5.9", features = [
    "derive",
    "std",
], default-features = false }
config = { version = "0.14.0", default-features = false }
device_query = "2.1.0"
eframe = { version = "0.28.1", default-features = false, features = ["glow"] }
egui = { version = "0.28.1", default-features = false, features = ["default_fonts"] }
egui_plot = "0.28.1"
proc_mem = "0.1.6"
windows-sys = { version = "0.52.0", features = [
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[profile.release]
opt-level = 3
